# ekcfi

./: .gitmodules  README.md  yifei-q
ebpf/: .gitignore  Makefile  policy_kern.c  policy_user.c  trace_data.txt  trace_kern.c  trace_user.c  traces.inc
ekcfi_test/: Cargo.toml
ekcfi_test/src/: ksym.rs  main.rs
mod/: .gitignore  Makefile  ekcfi.h  ekcfi_main.c  ekcfi_tramp_64.S
parse_trace/: Cargo.toml
parse_trace/src/: ksym.rs  main.rs
