[package]
name = "ekcfi_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
elf = "0.7.2"
libc = "0.2.147"

[profile.release]
codegen-units = 1
debug = 0
lto = "thin"
strip = true
