[package]
name = "parse_trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }

[profile.release]
codegen-units = 1
debug = 0
lto = "thin"
strip = true
